// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionsResult /> should render component when has not wrong 1`] = `
<div
  className="sc-ifAKCX iKgzTM"
>
  <div
    className="sc-EHOje dXuDBg"
  >
    <div
      className="sc-bwzfXH lOjaS"
      style={
        Object {
          "marginBottom": "16px",
        }
      }
    >
      <div
        className="sc-htpNat fCqHKh"
      >
        正解数
      </div>
      <div
        className="sc-bxivhb dTntfs"
      >
        10 / 10
      </div>
    </div>
    <div
      className="sc-bwzfXH lOjaS"
      style={
        Object {
          "marginBottom": "16px",
        }
      }
    >
      <div
        className="sc-htpNat fCqHKh"
      >
        平均回答時間
      </div>
      <div
        className="sc-bxivhb dTntfs"
      >
        2.5秒
      </div>
    </div>
    <a
      href="/training"
      onClick={[Function]}
    >
      <button
        className="bp3-button bp3-large bp3-icon-undo sc-bZQynM ieixNu"
        style={
          Object {
            "marginTop": 0,
          }
        }
      >
        メニューに戻る
      </button>
    </a>
  </div>
</div>
`;

exports[`<QuestionsResult /> should render component when has wrong 1`] = `
<div
  className="sc-ifAKCX iKgzTM"
>
  <div
    className="sc-EHOje dXuDBg"
  >
    <div
      className="sc-bwzfXH lOjaS"
      style={
        Object {
          "marginBottom": "16px",
        }
      }
    >
      <div
        className="sc-htpNat fCqHKh"
      >
        正解数
      </div>
      <div
        className="sc-bxivhb dTntfs"
      >
        8 / 10
      </div>
    </div>
    <div
      className="sc-bwzfXH lOjaS"
      style={
        Object {
          "marginBottom": "16px",
        }
      }
    >
      <div
        className="sc-htpNat fCqHKh"
      >
        平均回答時間
      </div>
      <div
        className="sc-bxivhb dTntfs"
      >
        2.5秒
      </div>
    </div>
    <button
      className="bp3-button bp3-large bp3-icon-repeat sc-bZQynM ieixNu"
      data-test="restart"
      onClick={[MockFunction]}
    >
      間違えた歌の練習をする
    </button>
    <a
      href="/training"
      onClick={[Function]}
    >
      <button
        className="bp3-button bp3-large bp3-icon-undo sc-bZQynM ieixNu"
        style={
          Object {
            "marginTop": 0,
          }
        }
      >
        メニューに戻る
      </button>
    </a>
  </div>
</div>
`;
